--- a/stylesheets/font.css
+++ b/stylesheets/font.css
@@ -18,6 +18,16 @@ h2 {
   text-shadow: 0 0 12px #00e600;
   text-transform: uppercase;
 }
+h3 {
+  font-size: 1vw;
+  line-height: 1.2vw;
+  font-family: "Pixeloid Mono";
+  font-weight: 100;
+  color: #00e600;
+  margin: 0;
+  text-shadow: 0 0 12px #00e600;
+  text-transform: uppercase;
+}
 p {
   font-size: 1.5vw;
   line-height: 1.7vw;
