--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -6,3 +6,5 @@
 @import "adaptive_tablet.css";
 @import "adaptive_mobile.css";
 @import "aboutus.css";
+@import "navigation.css";
+@import "services.css";
