--- a/stylesheets/aboutus.css
+++ b/stylesheets/aboutus.css
@@ -34,26 +34,106 @@
   background-image: url(/images/aboutus_graphic.png);
   width: 50%;
   background-repeat: no-repeat;
-  background-position: right;
+  background-position: center;
   background-size: contain;
 }
 .aboutus_wind_4 {
   grid-area: A4;
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  grid-template-columns: 1fr;
+  padding: 0vw;
+}
+.aboutus_wind_4 div {
+  border-bottom: 0.5vw solid #00e600;
+  overflow-x: hidden;
+  box-sizing: border-box;
+  padding: 0.5vw 1vw;
+}
+.aboutus_wind_4 div::-webkit-scrollbar {
+  width: 0vw;
+}
+
+.aboutus_wind_4 div:nth-of-type(4) {
+  border-bottom: 0vw solid #00e600;
 }
 .aboutus_wind_5 {
   grid-area: A5;
   border-left: 0.5vw solid #00e600;
   border-bottom: 0.5vw solid #00e600;
+  display: flex;
+}
+.aboutus_wind_5_content_1 {
+  width: 50%;
+  height: 100%;
+  background-image: url(/images/flower_icon.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+.aboutus_wind_5_content_1 h3 {
+  margin-bottom: 8%;
+}
+.aboutus_wind_5_content_2 {
+  width: 50%;
+  height: 100%;
+  background-image: url(/images/no_go_icon.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+.aboutus_wind_5_content_2 h3 {
+  margin-left: -2vw;
 }
 .aboutus_wind_6 {
   grid-area: A6;
   border-bottom: 0.5vw solid #00e600;
+  width: 100%;
+  height: 100%;
+}
+.aboutus_wind_6_content {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+.aboutus_wind_6_content_1 {
+  background-image: url(/images/vacation_icon.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  width: 40%;
+  height: 100%;
+}
+.aboutus_wind_6_content_2_1 {
+  border: 0.5vw dashed #00e600;
+  width: 100%;
+  height: fit-content;
+  box-sizing: border-box;
+  padding: 0.5vw;
+}
+.aboutus_wind_6_content_2_1 p {
+  line-height: 1vw;
 }
 .aboutus_wind_7 {
   grid-area: A7;
   border-top: 0.5vw solid #00e600;
   border-right: 0.5vw solid #00e600;
   border-bottom: 0.5vw solid #00e600;
+  background-image: url(/images/index_pop_up_4_content_img.png);
+  background-repeat: no-repeat;
+  background-position: right;
+  background-size: cover;
+}
+.aboutus_wind_7_content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .aboutus_container {
   grid-template-areas:
