--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -15,6 +15,7 @@ body {
   height: 100vh;
   background-color: #003501;
   overflow: hidden;
+  cursor: url("../images/Frame\ 36.png"), auto;
 }
 .top_lines {
   position: absolute;
@@ -49,6 +50,7 @@ body {
   outline-offset: -0.5vw;
   box-shadow: inset 0 0 12px #00e600;
   background-color: #003501;
+  z-index: 100;
 }
 .pop_up_content {
   box-sizing: border-box;
@@ -107,15 +109,19 @@ button:hover {
   background-color: #00e600;
   color: #003501;
 }
+
+button:hover > p {
+  color: #003501;
+}
 input[type="text"] {
-  width: auto;
+  width: 100%;
   border-bottom: 0.25vw solid #00e600;
-  font-size: 3vw;
-  line-height: 3.2vw;
+  font-size: 1.5vw;
+  line-height: 1.7vw;
   font-family: "Pixeloid Mono";
   font-weight: 100;
   color: #00e600;
-  margin: 0;
+  margin-top: 5px;
   text-shadow: 0 0 12px #00e600;
   text-transform: uppercase;
   background-color: #003501;
@@ -138,4 +144,104 @@ input[type="text"] {
 }
 input[type="text"]:focus {
   outline: none;
+}
+.icon_open_link {
+  position: relative;
+  bottom: 10%;
+  background-image: url(/images/open_link_icon.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 3vw;
+  height: 3vw;
+  right: 0;
+  margin-top: 20%;
+}
+.icon_open_link_navig {
+  position: relative;
+  top: 90%;
+  left: 90%;
+  background-image: url(/images/open_link_icon.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 3vw;
+  height: 3vw;
+}
+#index_icon {
+  cursor: url("../images/Frame\ 37.png"), auto;
+}
+#aboutus_icon {
+  cursor: url("../images/Frame\ 37.png"), auto;
+}
+#navigation_icon {
+  cursor: url("../images/Frame\ 37.png"), auto;
+}
+#services_icon {
+  cursor: url("../images/Frame\ 37.png"), auto;
+}
+.aboutus_wind_5 {
+  cursor: url("../images/Frame\ 37.png"), auto;
+}
+.aboutus_wind_6 {
+  cursor: url("../images/Frame\ 37.png"), auto;
+}
+.navig_wind_1 {
+  cursor: url("../images/Frame\ 37.png"), auto;
+}
+.navig_wind_4 {
+  cursor: url("../images/Frame\ 37.png"), auto;
+}
+.navig_wind_5 {
+  cursor: url("../images/Frame\ 37.png"), auto;
+}
+.services_wind_1 {
+  cursor: url("../images/Frame\ 37.png"), auto;
+}
+.services_wind_2 {
+  cursor: url("../images/Frame\ 37.png"), auto;
+}
+button:active {
+  cursor: url("../images/Frame\ 37.png"), auto;
+}
+button:hover {
+  cursor: url("../images/Frame\ 37.png"), auto;
+}
+.goout_page {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  display: none;
+}
+.goout_alert {
+  height: min-content;
+  width: 50vw;
+  background-color: #003501;
+  border: 0.5vw solid #00e600;
+  box-sizing: border-box;
+  padding: 2vw;
+  text-align: center;
+}
+.goout_buttons {
+  display: flex;
+  margin-top: 3vw;
+}
+.navig_pop_up_2 {
+  height: 40vh;
+  width: 50vw;
+}
+.services_pop_up_1 {
+  width: 60vw;
+  height: 68vh;
+}
+.navig_pop_up_1_content {
+  display: grid;
+  grid-template-areas: "NP1 NP2" "NP1 NP2" "NP1 NP2" "NP3 NP3";
+  grid-template-rows: repeat(4, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+  padding: 0;
+  height: 80%;
 }
