--- a/stylesheets/services.css
+++ b/stylesheets/services.css
@@ -5,7 +5,7 @@
     "S1 S1 S1 S1 S2 S2 S2 S2"
     "S1 S1 S1 S1 S2 S2 S2 S2"
     "S1 S1 S1 S1 S2 S2 S2 S2"
-    "S3 S3 S3 S3 S3 S3 S3 S3 "
+    "S1 S1 S1 S1 S2 S2 S2 S2"
     "S3 S3 S3 S3 S3 S3 S3 S3 "
     "S3 S3 S3 S3 S3 S3 S3 S3 ";
 }
@@ -18,11 +18,11 @@
   flex-direction: column;
   align-items: center;
 }
-.services_wind_1 img {
+.services_wind_1 > img {
   height: 80%;
   width: auto;
 }
-.services_wind_2 img {
+.services_wind_2 > img {
   height: 80%;
   width: auto;
 }
@@ -48,4 +48,38 @@
 }
 .services_wind_3_content_1 input {
   margin-left: 1vw;
+  width: min-content;
+  font-size: 3vw;
+  line-height: 3.2vw;
+}
+.services_wind_3_content_2_1 {
+  width: 35%;
+  height: auto;
+}
+.services_wind_3_content_2_2 {
+  width: 20%;
+  height: auto;
+}
+.services_wind_3_content_2_3 {
+  width: 15%;
+  height: auto;
+}
+.services_wind_3_content_2 {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  margin-top: 1vw;
+}
+.services_wind_3_concept_2 button {
+  width: 30%;
+}
+
+#sendApplication {
+  width: 20% !important;
+}
+
+@media all and (min-width: 700px) and (max-width: 1025px) and (orientation: portrait) {
+  #wind-ser-1 {
+    height: 60% !important;
+  }
 }
