--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -1,7 +1,7 @@
 .bad_signal_top_img {
   width: 100vw;
   height: 100vh;
-  background-image: url(/images/bad_signal_2.png);
+  background-image: url(../images/bad_signal_2.png);
   background-repeat: no-repeat;
   position: absolute;
   background-size: cover;
